--- a/src-templates/partials/nav.html
+++ b/src-templates/partials/nav.html
@@ -25,10 +25,15 @@
                 <svg role="presentation"><use xlink:href="#svg--twitter"></use></svg>
                 @dbushell</a>
         </li>
-        <li class="nav__item nav__item--google">
-            <a rel="me" target="_blank" title="David Bushell on Google+" href="https://plus.google.com/112664170427933857280/" class="nav__link">
-                <svg role="presentation"><use xlink:href="#svg--google"></use></svg>
-                Google+</a>
+        <li class="nav__item nav__item--github">
+            <a rel="me" target="_blank" title="David Bushell on GitHub" href="https://github.com/dbushell/" class="nav__link">
+                <svg role="presentation"><use xlink:href="#svg--github"></use></svg>
+                GitHub</a>
+        </li>
+        <li class="nav__item nav__item--codepen">
+            <a rel="me" target="_blank" title="David Bushell on CodePen" href="http://codepen.io/dbushell/" class="nav__link">
+                <svg role="presentation"><use xlink:href="#svg--codepen"></use></svg>
+                CodePen</a>
         </li>
     </ul>
     <a class="nav-close" id="nav-close" href="#top">
