--- a/src-assets/scss/_origin.scss
+++ b/src-assets/scss/_origin.scss
@@ -75,18 +75,18 @@ $colour__silver    : #f7f7f5;
 $colour__slate     : #494b4c;
 $colour__cream     : #f2f0e6;
 $colour__canvas    : #d9d7ce;
-$colour__highlight : #fff699;
-$colour__error     : #e54545;
-$colour__green     : #99cc66;
+$colour__highlight : #fffbcc;
+$colour__error     : #bf5a56; // #e54545;
+$colour__green     : #66ccaa; // #99cc66;
 $colour__brand     : $colour__green;
 
 $colour__text               : #494b4d;
 $colour__text--light        : #919599;
 $colour__text--dark         : #303233;
-$colour__text--brand        : #74b336;
+$colour__text--brand        : $colour__brand;
 
-$colour__text--link         : #3d9ccc;
-$colour__text--link--hover  : darken($colour__text--link, 20);
+$colour__text--link         : #1d97bf; //#3d9ccc;
+$colour__text--link--hover  : #1983a6; //darken($colour__text--link, 20);
 $colour__text--error        : $colour__error;
 
 $colour__hairline           : lighten(#b3b0aa, 15);
@@ -101,7 +101,7 @@ $colour__bg--dark           : $colour__slate;
 // Font usage for normal, display, script, and monospace stacks
 
 $fonts--sans       : "Helvetica Neue", Helvetica, Arial, sans-serif;
-$fonts--serif      : "droid-serif", "Droid Serif", Georgia, serif;
+$fonts--serif      : "ff-tisa-web-pro", /*"droid-serif", "Droid Serif",*/ Georgia, serif;
 $fonts--monospace  : Monaco, Courier, monospace;
 
 // now using universal IE stylesheet concept
