--- a/src-templates/partials/header.html
+++ b/src-templates/partials/header.html
@@ -28,7 +28,8 @@ Copyright © David Bushell | @dbushell | http://dbushell.com
 {{ inline 'assets/js/loadrunner.min.js' }}
 loadCSS('{{ site_url 'assets/css/style.css' }}?ver={{ site_ver }}');
 </script>
-<link rel="canonical" href="{{ site_url path }}" />
+<link rel="canonical" href="{{ site_url path }}">
+<link rel="alternate" type="application/rss+xml" title="dbushell.com RSS Feed" href="{{ site_url 'rss.xml' }}">
 </head>
 <body>
 
