--- a/src-assets/scss/_header.scss
+++ b/src-assets/scss/_header.scss
@@ -19,22 +19,25 @@
     }
 
     .header__title {
+        position: relative;
         display: block;
         @include font-size($unit--p, $unit * 3);
         margin-bottom: 0;
         letter-spacing: 0;
-        text-align: right;
         font-weight: bold;
+        text-align: right;
 
         a {
+            position: relative;
+            display: inline-block;
             color: $colour__text--light;
-            // opacity: 0.5;
 
             &:focus, &:hover {
                 color: $colour__brand;
-                // opacity: 1;
             }
         }
+
+
     }
 
 } // critical
@@ -48,6 +51,27 @@
         .js & {
             opacity: 1;
             transition: opacity 300ms ease;
+        }
+    }
+
+    .header__title a {
+
+        @include respond-max($breakpoint--aside - 1)
+        {
+            &:after {
+                position: absolute;
+                overflow: hidden;
+                display: block;
+                content: "";
+                top: em(-$unit/2, $unit--p);
+                right: 100%;
+                width: em($unit * 4, $unit--p);
+                height: em($unit * 4, $unit--p);
+                margin-right: em($unit, $unit--p);
+                border-radius: 100%;
+                background: url("/assets/img/me-icon.jpg") 0 0 no-repeat;
+                background-size: 100% 100%;
+            }
         }
     }
 
