--- a/src-templates/partials/nav.html
+++ b/src-templates/partials/nav.html
@@ -12,7 +12,7 @@
             <a href="{{ site_url 'showcase' }}" class="nav__link">Portfolio</a>
         </li>
         <li class="nav__item">
-            <a href="{{ site_url 'responsive-design' }}" class="nav__link">Services</a>
+            <a href="{{ site_url 'services' }}" class="nav__link">Services</a>
         </li>
         <li class="nav__item">
             <a href="{{ site_url 'blog' }}" class="nav__link">Blog</a>
