--- a/src-assets/scss/_tables.scss
+++ b/src-assets/scss/_tables.scss
@@ -50,3 +50,36 @@ table {
         padding: em($unit/2) em($unit);
     }
 }
+
+.speclist {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 0;
+    align-items: flex-start;
+    justify-content: flex-start;
+    max-width: em(320);
+    list-style: circle;
+    margin-bottom: em($unit--baseline/2);
+
+    p + & {
+        margin-top: em($unit--baseline/2);
+    }
+
+    li {
+        @include font-size($unit--p--small, $unit * 3);
+        padding-left: em($unit--gutter/2, $unit--p--small);
+        margin-bottom: 0;
+        flex-basis: 50%;
+        box-sizing: border-box;
+        list-style-position: inside;
+    }
+
+    @include respond-min($breakpoint--mobile)
+    {
+        max-width: em(640);
+
+        li {
+            flex-basis: 25%;
+        }
+    }
+}
