--- a/src-assets/scss/_misc.scss
+++ b/src-assets/scss/_misc.scss
@@ -37,7 +37,7 @@
 //     margin-bottom: em($unit--baseline);
 //     padding: em($unit--baseline/2) em($unit--gutter/2);
 //     text-align: center;
-//     background: $colour__bg--light;
+//     background: $white;
 //     box-sizing: border-box;
 // }
 
