--- a/src-assets/scss/_folio.scss
+++ b/src-assets/scss/_folio.scss
@@ -3,7 +3,7 @@
 
     .folio__link {
         display: block;
-        background-color: rgba($colour__bg, 0.85);
+        background-color: rgba($beige, 0.85);
     }
 
 }
@@ -51,11 +51,11 @@
         width: 100%;
         height: 0;
         padding-bottom: percentage(228 / 328);
-        background-color: rgba($colour__bg, 0.85);
+        background-color: rgba($beige, 0.85);
         transition: background-color 200ms ease;
 
         &:focus, &:hover {
-            background-color: rgba($colour__canvas, 0);
+            background-color: rgba($canvas, 0);
 
 
             .folio__image {
@@ -94,9 +94,9 @@
         left: 0;
         right: 0;
         margin: 0 auto;
-        padding: 0 em($unit * 2, $unit--h3);
-        @include font-size($unit--h3, $unit * 4);
-        color: $colour__white;
+        padding: 0 em($unit * 2, $h3);
+        @include font-size($h3, $unit * 4);
+        color: $white;
         text-align: center;
         opacity: 0;
         transform: translateY(-50%);
@@ -104,7 +104,7 @@
 
         .lt-ie9 & {
             visibility: hidden;
-            margin-top: em(-($unit--h3 / 2), $unit--h3);
+            margin-top: em(-($h3 / 2), $h3);
         }
     }
 
