--- a/src-assets/scss/_header.scss
+++ b/src-assets/scss/_header.scss
@@ -21,7 +21,7 @@
     .header__title {
         position: relative;
         display: block;
-        @include font-size($unit--p, $unit * 3);
+        @include font-size($p, $unit * 3);
         margin-bottom: 0;
         letter-spacing: 0;
         font-weight: bold;
@@ -30,10 +30,10 @@
         a {
             position: relative;
             display: inline-block;
-            color: $colour__text--light;
+            color: $grey;
 
             &:focus, &:hover {
-                color: $colour__brand;
+                color: $green;
             }
         }
 
@@ -63,11 +63,11 @@
                 overflow: hidden;
                 display: block;
                 content: "";
-                top: em(-$unit/2, $unit--p);
+                top: em(-$unit/2, $p);
                 right: 100%;
-                width: em($unit * 4, $unit--p);
-                height: em($unit * 4, $unit--p);
-                margin-right: em($unit, $unit--p);
+                width: em($unit * 4, $p);
+                height: em($unit * 4, $p);
+                margin-right: em($unit, $p);
                 border-radius: 100%;
                 background: url("/assets/img/me-icon.jpg") 0 0 no-repeat;
                 background-size: 100% 100%;
@@ -77,7 +77,7 @@
 
     .header--fixed {
         position: fixed !important;
-        background: rgba($colour__bg--light, 0.9);
+        background: rgba($white, 0.9);
 
         .header__title {
             a {
@@ -95,7 +95,7 @@
         .js & {
             transform: translate3d(0, -100%, 0);
             transition: opacity 300ms ease, transform 1ms 300ms linear;
-            background: rgba($colour__bg--light, 0);
+            background: rgba($white, 0);
             pointer-events: none;
             opacity: 0;
 
