--- a/src-assets/scss/_nav.scss
+++ b/src-assets/scss/_nav.scss
@@ -12,7 +12,7 @@
         width: 100%;
         height: 0;
         opacity: 0;
-        background: rgba($colour__bg--dark, 0.7);
+        background: rgba($black, 0.7);
         transition: opacity 300ms ease, height 1ms 300ms ease;
         transform: translate3d(0, 0, 0);
         backface-visibility: hidden;
@@ -53,10 +53,10 @@
 
         &:focus, &:hover {
             opacity: 1 !important;
-            color: $colour__brand;
+            color: $green;
 
             svg {
-                fill: $colour__brand;
+                fill: $green;
             }
         }
 
@@ -68,13 +68,13 @@
     }
 
     .nav-open {
-        color: $colour__text--light;
+        color: $grey;
 
         span {
             position: absolute;
-            @include font-size($unit--p, $unit * 5);
-            top: em($unit, $unit--p);
-            left: em($unit * 7, $unit--p);
+            @include font-size($p, $unit * 5);
+            top: em($unit, $p);
+            left: em($unit * 7, $p);
             pointer-events: none;
             opacity: 0;
         }
@@ -131,7 +131,7 @@
         max-width: 75%;
         overflow-y: auto;
         box-sizing: border-box;
-        background: darken($colour__bg--dark, 5);
+        background: darken($black, 5);
         padding: em($unit * 11) 0 em($unit * 4) 0;
     }
 
@@ -203,12 +203,12 @@
         }
 
         &::-webkit-scrollbar-track {
-            background: darken($colour__bg--dark, 5);
+            background: darken($black, 5);
         }
 
         &::-webkit-scrollbar-thumb {
-            background: $colour__text--light;
-            border: 3px solid $colour__bg--dark;
+            background: $grey;
+            border: 3px solid $black;
             border-radius: 10px;
         }
 
@@ -218,23 +218,23 @@
     .nav__list {
         margin: 0;
         @include clearfix;
-        background: $colour__bg--dark;
+        background: $black;
     }
 
     .nav__item {
         display: block;
         margin: 0;
-        @include font-size($unit--p, ($unit * 5) - 2);
-        border-bottom: em(2, $unit--p) solid darken($colour__bg--dark, 5);
+        @include font-size($p, ($unit * 5) - 2);
+        border-bottom: em(2, $p) solid darken($black, 5);
 
         svg {
             position: relative;
             display: block;
             float: left;
-            top: em(6, $unit--p);
-            width: em(18, $unit--p);
-            height: em(18, $unit--p);
-            margin-right: em(4, $unit--p);
+            top: em(6, $p);
+            width: em(18, $p);
+            height: em(18, $p);
+            margin-right: em(4, $p);
             fill: currentColor;
 
             .no-svg & {
@@ -246,9 +246,9 @@
     // .nav__item--twitter {
 
     //     svg {
-    //         width: em(22, $unit--p);
+    //         width: em(22, $p);
     //         fill: lighten(#55acee, 10);
-    //         margin-left: em(-4, $unit--p);
+    //         margin-left: em(-4, $p);
     //     }
 
     //     .nav__link {
@@ -271,22 +271,22 @@
         @include no-tap-highlight;
         display: block;
         box-sizing: border-box;
-        color: $colour__white;
-        padding: em($unit, $unit--p) em($unit--gutter, $unit--p);
+        color: $white;
+        padding: em($unit, $p) em($unit--gutter, $p);
 
         &:focus, &:hover {
-            color: $colour__white;
+            color: $white;
         }
 
         .js:not(.iOS) & {
 
             &:focus, &:hover {
-                color: $colour__brand !important;
-                svg { fill: $colour__brand !important; }
+                color: $green !important;
+                svg { fill: $green !important; }
             }
 
             &:active {
-                background: darken($colour__bg--dark, 5);
+                background: darken($black, 5);
             }
         }
     }
