--- a/src-assets/scss/_origin.scss
+++ b/src-assets/scss/_origin.scss
@@ -24,6 +24,17 @@ $critical-css: false !default;
     @return ($px / $base) + em;
 }
 
+@mixin font-size($font-size, $line-height: true) {
+    font-size: em($font-size);
+    @if $line-height == true {
+        line-height: em(ceil($font-size / $unit) * $unit, $font-size);
+        // line-height: ceil($font-size / $unit--baseline) * ($unit--baseline / $font-size) + em;
+    }
+    @else {
+        line-height: em($line-height, $font-size);
+    }
+}
+
 // Units for consistent spacing, vertical rhythm, and a typographic baseline
 
 $unit            : 7;
@@ -32,17 +43,17 @@ $unit--baseline  : $unit * 4;
 
 $unit--field     : $unit * 6;
 
-$unit--p         : 17;
-$unit--p--large  : 24;
-$unit--p--small  : 14;
+$p         : 20;
+$p--large  : 25;
+$p--small  : 16;
 
-$unit--h0: 55;
-$unit--h1: 45;
-$unit--h2: 30;
-$unit--h3: 25;
-$unit--h4: 20;
-$unit--h5: $unit--p;
-$unit--h6: $unit--p;
+$h0: 60;
+$h1: 50;
+$h2: 35;
+$h3: 30;
+$h4: 25;
+$h5: $p;
+$h6: $p;
 
 $nav--pinned      : 240;
 $footer--width    : 420;
@@ -61,6 +72,7 @@ $breakpoint--hero--1 : $breakpoint--mini;
 $breakpoint--hero--2 : $breakpoint--mobile;
 $breakpoint--hero--3 : 800;
 
+// zIndexes
 
 $z-index--main     : 1000;
 $z-index--header   : 2000;
@@ -68,34 +80,24 @@ $z-index--footer   : 3000;
 $z-index--overlay  : 4000;
 $z-index--nav      : 5000;
 
-// Colours with more abstract semantic names
+// Colours
 
-$colour__white     : #fff;
-$colour__silver    : #f7f7f5;
-$colour__slate     : #494b4c;
-$colour__cream     : #f2f0e6;
-$colour__canvas    : #d9d7ce;
-$colour__highlight : #fffbcc;
-$colour__error     : #bf5a56; // #e54545;
-$colour__green     : #66ccaa; // #99cc66;
-$colour__brand     : $colour__green;
+$white  : #ffffff;
+$black  : #494b4d;
+$grey   : #919599;
+$beige  : #f2f0e6;
+$canvas : #d9d7ce;
+$pink   : #ff6680;
+$red    : #e55c5c;
+$green  : #a1e5cf;
+$blue   : #1d97bf;
+$yellow : #fffbcc;
+$dark-blue: #39809e;
 
-$colour__text               : #494b4d;
-$colour__text--light        : #919599;
-$colour__text--dark         : #303233;
-$colour__text--brand        : $colour__brand;
-
-$colour__text--link         : #1d97bf; //#3d9ccc;
-$colour__text--link--hover  : #1983a6; //darken($colour__text--link, 20);
-$colour__text--error        : $colour__error;
 
 $colour__hairline           : lighten(#b3b0aa, 15);
 $colour__hairline--light    : lighten($colour__hairline, 15);
 $colour__hairline--dark     : darken($colour__hairline, 15);
-
-$colour__bg                 : $colour__cream;
-$colour__bg--light          : $colour__white;
-$colour__bg--dark           : $colour__slate;
 
 
 // Font usage for normal, display, script, and monospace stacks
@@ -158,27 +160,9 @@ $fonts--monospace  : Monaco, Courier, monospace;
     @return percentage($offset / $width);
 }
 
-
 @function gc-spanning($col_count: 1, $col_total: 6, $ratio: 1, $width: $breakpoint--desktop)
 {
     @return gc-offset($col_count, $col_total, $ratio, $width, 1);
-}
-
-// old and busted
-// @mixin font-size($s1, $s2) {
-//     font-size: em($s1);
-//     line-height: em($s2, $s1);
-// }
-
-// new hotness from @inuitcss
-@mixin font-size($font-size, $line-height: true) {
-    font-size: em($font-size);
-    @if $line-height == true {
-        line-height: ceil($font-size / $unit--baseline) * ($unit--baseline / $font-size) + em;
-    }
-    @else {
-        line-height: em($line-height, $font-size);
-    }
 }
 
 @mixin no-appearance {
