--- a/src-assets/scss/amp.scss
+++ b/src-assets/scss/amp.scss
@@ -23,12 +23,12 @@ $combined-css: false;
 }
 
 .post__title a {
-    color: $colour__text;
+    color: $black;
     text-decoration: none !important;
-    // border-bottom: 1px solid rgba($colour__text--link, 0.5);
+    // border-bottom: 1px solid rgba($blue, 0.5);
 
     // &:focus, &:hover {
-    //     color: $colour__text--link--hover;
-    //     // border-bottom: 1px solid rgba($colour__text--link--hover, 0.5);
+    //     color: $blue;
+    //     // border-bottom: 1px solid rgba($blue, 0.5);
     // }
 }
