--- a/src-assets/scss/editor.scss
+++ b/src-assets/scss/editor.scss
@@ -8,10 +8,10 @@ $combined-css: true;
 @import "typography";
 
 body {
-    color: $colour__text;
+    color: $black;
     font-size: 16px;
     line-height: 1;
     font-family: $fonts--serif;
     padding: em($unit * 2);
-    background: $colour__bg;
+    background: $beige;
 }
